syntax = "proto3";

package ai.lzy.v1.portal;

import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/portal/portal.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "LzyPortalApi";
option java_package = "ai.lzy.v1.portal";

service LzyPortal {
  rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Status (google.protobuf.Empty) returns (PortalStatus);
  rpc OpenSlots (OpenSlotsRequest) returns (OpenSlotsResponse);
}

message PortalSlotStatus {
  Slot slot = 1;
  string connectedTo = 2;
  SlotStatus.State state = 3;
  SnapshotStatus snapshotStatus = 4;

  enum SnapshotStatus {
    UNDEFINED = 0;
    NOT_IN_SNAPSHOT = 1;  // If slot not a snapshot slot
    SYNCING = 2;  // Loading data to or from storage
    SYNCED = 3;  // Data synchronized with storage
  }
}

message PortalStatus {
  repeated PortalSlotStatus slots = 1;
}

message OpenSlotsRequest {
  repeated PortalSlotDesc slots = 1;
}

message OpenSlotsResponse {
  bool success = 1;
  string description = 2;
}
